--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,28 @@
             <th>Spaces</th>
             <th>Lat</th>
             <th>Long</th>
-            <th>EastITM</th>
-            <th>NorthITM</th>
-            <th>EastIG</th>
-            <th>NorthIG</th>
+
 
         </tr>
     </table>
 
     </div>
+    <div>
+        <h1 align="center" >Galway Metre Parking</h1>
+        <table class = "table" >
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Spaces</th>
+            <th>Lat</th>
+            <th>Long</th>
 
+
+        </tr>
+        </table>
+
+    </div>
     </body>
 
 
