Modified version of the Server side
Made some changes on the server side, adding extra node-modules...

--- a/clientSide/app/index.html
+++ b/clientSide/app/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+       <div class="pull-left" ng-view=""></div>
     </div>
 
     <div class="footer">
